Modernize deprecated Java APIs and improve JDK 21 compatibility
This commit addresses deprecation warnings and modernizes the codebase
for Java 21 compatibility:

1. Replace deprecated Security APIs with modern alternatives:
   - Session.java: Use Subject.callAs() instead of Subject.doAsPrivileged()
   - DefaultAuthorizationManager.java: Remove AccessController usage,
     rely solely on local policy for authorization
   - SecurityVerifier.java: Simplify verifyStaticPermission() to use
     local policy directly
   - GroupPermission.java: Use Subject.current() instead of
     AccessController.getContext() with SubjectDomainCombiner
   - GroupPermissionTest.java: Update test to use Subject.callAs()

2. Replace deprecated new URL(String) constructor with URI.create().toURL():
   - WikiModuleInfo.java
   - Denounce.java
   - SitemapIT.java
   - TestJDBCDataSource.java
   - SecurityVerifier.java

3. Replace deprecated new Locale(String, String) constructor:
   - Preferences.java: Use Locale.of()
   - TemplateManager.java: Use Locale.of()
   - HttpMockFactory.java: Use Locale.ROOT constant

4. Replace deprecated Runtime.exec() with ProcessBuilder:
   - FileUtil.java: Use ProcessBuilder for command execution
   - FileUtilTest.java: Update test to use ProcessBuilder

5. Add -XX:+EnableDynamicAgentLoading JVM flag to suppress dynamic
   agent loading warnings:
   - pom.xml: Add to surefire argLine and mem-profiling profile
   - jspwiki-it-tests/pom.xml: Add to cargo jvmargs

6. Exclude JDBCPluginIT from non-JDBC IT modules that lack HSQLDB config:
   - jspwiki-it-test-custom/pom.xml
   - jspwiki-it-test-custom-absolute-urls/pom.xml
   - jspwiki-it-test-cma/pom.xml

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>